// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<input
  className="sc-htpNat fHGkKJ"
  data-mask={null}
  id={null}
  maxLength={null}
  onBlur={null}
  onChange={null}
  onFocus={null}
  pattern={null}
  placeholder={null}
  type="text"
  value={null}
/>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
Array [
  <label
    className="sc-bdVaJa bMhKJi"
    htmlFor="input-with-label"
  >
     
    Text label
     
  </label>,
  <input
    className="sc-htpNat fHGkKJ"
    data-mask={null}
    id="input-with-label"
    maxLength={null}
    onBlur={null}
    onChange={null}
    onFocus={null}
    pattern={null}
    placeholder={null}
    type="text"
    value={null}
  />,
]
`;

exports[`Input component  with a regexp as pattern prop should match the snapshot 1`] = `
<input
  className="sc-htpNat fHGkKJ"
  data-mask={null}
  id={null}
  maxLength={null}
  onBlur={null}
  onChange={null}
  onFocus={null}
  pattern="\\\\d"
  placeholder={null}
  type="text"
  value={null}
/>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
Array [
  <input
    className="sc-htpNat jMXcki"
    data-mask={null}
    id={null}
    maxLength={null}
    onBlur={null}
    onChange={null}
    onFocus={null}
    pattern={null}
    placeholder={null}
    type="text"
    value={null}
  />,
  <div
    className="sc-bwzfXH hGRJaF"
  >
    Error message
  </div>,
]
`;
